src/objects/IRD_Incident__c.object
<CustomObject>
    <description>Incident object to be used as part of the &quot;Incident Reporting and Dashboard&quot; application.</description>
    <fields>
        <fullName>Actual_Elapsed_Percentage_Resolution__c</fullName>
        <label>Actual Elapsed Percentage (Resolution)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Elapsed_Percentage_Response__c</fullName>
        <label>Actual Elapsed Percentage (Response)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Elapsed_Time_Resolution__c</fullName>
        <label>Actual Elapsed Time (Resolution)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Elapsed_Time_Response__c</fullName>
        <label>Actual Elapsed Time (Response)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date_Resolution__c</fullName>
        <label>Actual End Date (Resolution)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date_Response__c</fullName>
        <label>Actual End Date (Response)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date_Resolution__c</fullName>
        <label>Actual Start Date (Resolution)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date_Response__c</fullName>
        <label>Actual Start Date (Response)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Time_Left_Resolution__c</fullName>
        <label>Actual Time Left (Resolution)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Time_Left_Response__c</fullName>
        <label>Actual Time Left (Response)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <label>Assigned to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Group__c</fullName>
        <label>Assignment Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Duration_Resolution__c</fullName>
        <label>Business Duration (Resolution)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Duration_Response__c</fullName>
        <label>Business Duration (Response)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calc_Result_Resolution__c</fullName>
        <label>Calc Result (Resolution)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calc_Result_Response__c</fullName>
        <label>Calc Result (Response)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caller__c</fullName>
        <label>Caller</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Incident</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Request</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Caused_By_Change__c</fullName>
        <label>Caused By Change</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Item__c</fullName>
        <label>Configuration Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Resolution__c</fullName>
        <label>Created (Resolution)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Response__c</fullName>
        <label>Created (Response)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <picklist>
            <picklistValues>
                <fullName>1 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incident_Number__c</fullName>
        <externalId>true</externalId>
        <label>Incident Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opened__c</fullName>
        <label>Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opened_by__c</fullName>
        <label>Opened by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_for__c</fullName>
        <label>Requested for</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolved_By__c</fullName>
        <label>Resolved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolved_Date_Resolution__c</fullName>
        <label>Resolved Date (Resolution)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolved_Date_Response__c</fullName>
        <label>Resolved Date (Response)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolved_Date__c</fullName>
        <label>Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Responded_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Responded (Resolution)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responded_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Responded (Response)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_Definition_Resolution__c</fullName>
        <label>SLA Definition (Resolution)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Definition_Response__c</fullName>
        <label>SLA Definition (Response)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Self Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lync IM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web/Self Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Service Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>scm_support</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_Resolution__c</fullName>
        <label>Stage (Resolution)</label>
        <picklist>
            <picklistValues>
                <fullName>Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_Response__c</fullName>
        <label>Stage (Response)</label>
        <picklist>
            <picklistValues>
                <fullName>Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Time_Resolution__c</fullName>
        <label>Start Time (Resolution)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time_Response__c</fullName>
        <label>Start Time (Response)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting User Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Corporate Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio/Visual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Peripheral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firewall/IDS/IPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Port</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch/Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Access Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DB2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSSQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sybase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desk Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOIP Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Worked_Resolution__c</fullName>
        <label>Time Worked (Resolution)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Worked_Response__c</fullName>
        <label>Time Worked (Response)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>1 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Incident</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Assignment_Group__c</columns>
        <columns>Category__c</columns>
        <columns>Subcategory__c</columns>
        <columns>State__c</columns>
        <columns>Resolved_By__c</columns>
        <columns>Resolved_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Partner_SAP_Basis</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Configuration_Item__c</columns>
        <columns>Category__c</columns>
        <columns>Subcategory__c</columns>
        <columns>Resolved_By__c</columns>
        <columns>Resolved_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assignment_Group__c</field>
            <operation>equals</operation>
            <value>Partner SAP Basis</value>
        </filters>
        <label>Partner SAP Basis</label>
    </listViews>
    <listViews>
        <fullName>Partner_SAP_FICO</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Configuration_Item__c</columns>
        <columns>Category__c</columns>
        <columns>Subcategory__c</columns>
        <columns>Resolved_By__c</columns>
        <columns>Resolved_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assignment_Group__c</field>
            <operation>equals</operation>
            <value>Partner SAP FICO</value>
        </filters>
        <label>Partner SAP FICO</label>
    </listViews>
    <listViews>
        <fullName>Partner_SAP_HR</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Configuration_Item__c</columns>
        <columns>Category__c</columns>
        <columns>Subcategory__c</columns>
        <columns>Resolved_By__c</columns>
        <columns>Resolved_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assignment_Group__c</field>
            <operation>equals</operation>
            <value>Partner SAP HR</value>
        </filters>
        <label>Partner SAP HR</label>
    </listViews>
    <listViews>
        <fullName>Partner_SAP_MM</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Configuration_Item__c</columns>
        <columns>Category__c</columns>
        <columns>Subcategory__c</columns>
        <columns>Resolved_By__c</columns>
        <columns>Resolved_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Assignment_Group__c</field>
            <operation>equals</operation>
            <value>Partner SAP MM</value>
        </filters>
        <label>Partner SAP MM</label>
    </listViews>
    <listViews>
        <fullName>Partner_SAP_PI</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Configuration_Item__c</columns>
        <columns>Category__c</columns>
        <columns>Subcategory__c</columns>
        <columns>Resolved_By__c</columns>
        <columns>Resolved_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assignment_Group__c</field>
            <operation>equals</operation>
            <value>Partner SAP PI</value>
        </filters>
        <label>Partner SAP PI</label>
    </listViews>
    <listViews>
        <fullName>Partner_SAP_PM</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Configuration_Item__c</columns>
        <columns>Category__c</columns>
        <columns>Subcategory__c</columns>
        <columns>Resolved_By__c</columns>
        <columns>Resolved_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assignment_Group__c</field>
            <operation>equals</operation>
            <value>Partner SAP PM</value>
        </filters>
        <label>Partner SAP PM</label>
    </listViews>
    <listViews>
        <fullName>Partner_SAP_Security</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Configuration_Item__c</columns>
        <columns>Category__c</columns>
        <columns>Subcategory__c</columns>
        <columns>Resolved_By__c</columns>
        <columns>Resolved_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assignment_Group__c</field>
            <operation>equals</operation>
            <value>Partner SAP Security</value>
        </filters>
        <label>Partner SAP Security</label>
    </listViews>
    <nameField>
        <label>Incident Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>